# tauri-plugin-iap

./: .gitignore  .prettierignore  Cargo.toml  README.md  build.rs  cspell.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: checks.yml  publish.yml
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt  IapPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: ExamplePlugin.swift  IapPlugin.swift
macos/: Package.swift
macos/Sources/: IapPlugin.swift  bridging-header.h
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: acknowledge_purchase.toml  get_product_status.toml  get_purchase_history.toml
permissions/schemas/: schema.json
src/: android.rs  apple.rs  commands.rs  desktop.rs  error.rs  lib.rs  macos.rs  mobile.rs  models.rs  windows.rs
