[package]
name = "tauri-plugin-iap"
version = "0.3.2"
authors = ["You"]
description = "A Tauri v2 plugin that enables In-App Purchases (IAP)"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-iap"
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-iap"

[features]
default = []
unstable = [
    "dep:swift-bridge",
    "dep:serde_json",
    "dep:objc2",
    "dep:objc2-core-foundation",
    "dep:objc2-security",
]

[dependencies]
tauri = { version = "2.7.0" }
serde = "1.0"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
swift-bridge = { version = "0.1", features = ["async"], optional = true }
serde_json = { version = "1.0", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-core-foundation = { version = "0.3", optional = true }
objc2-security = { version = "0.3", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Foundation_Collections",
    "Services_Store",
    "System",
] }
windows-result = "0.3"
windows-collections = "0.2"
serde_json = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-bridge-build = "0.1"
